--- a/templates/about.html
+++ b/templates/about.html
@@ -8,9 +8,12 @@
 <body>
   <div class="wrapper">
     <h1>ℹ️ Informācija par spēli</h1>
-    <p>Šī ir interaktīva refleksu spēle, kuras mērķis ir klikšķināt uz kustīgu bumbu, lai iegūtu punktus. Jo vairāk punktu, jo mazāka kļūst bumba!</p>
-    <p>Tu vari spēli sākt jebkurā laikā un sacensties ar draugiem.</p>
-    <a href="index.html"><button>🏠 Atpakaļ uz sākumu</button></a>
+    
+    <p>🎮 Šī ir interaktīva refleksu spēle – Tava misija ir klikšķināt uz kustīgu bumbu, kas ik pa laikam maina vietu.</p>
+    <p>⏱️ Tev ir 30 sekundes, lai iegūtu pēc iespējas vairāk punktus. Jo vairāk punktu, jo grūtāk kļūst – bumba kļūst mazāka!</p>
+    <p>👥 Spēli vari spēlēt atkal un atkal, un sacensties ar draugiem, lai iekļūtu Top 5 rezultātos.</p>
+
+    <a href="/"><button>🏠 Atpakaļ uz sākumu</button></a>
   </div>
 </body>
 </html>
