--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
       <p>⏱️ Atlikušais laiks: <span id="time">30</span> sek.</p>
     </div>
     <h1 id="welcome-text">Laipni lūdzam spēlē!</h1>
-    <button id="start-game">Sākt spēli</button>
-    <button id="top-scores">Top Rezultāti</button>
+    <button onclick="startGame()">Sākt spēli</button>
+    <button id="topScores()">Top Rezultāti</button>
     <script src="{{ url_for('static', filename='js/sakums.js') }}"></script>
     
     <div class="controls">
