--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
 
       <label for="playerName">Tavs vārds:</label><br />
       <input type="text" id="playerName" placeholder="Ievadi vārdu" />
+      <div id="game-container">
+      </div>      
 
       <div class="controls">
         <button onclick="startGame()">▶️ Sākt spēli</button>
