--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
 
       <div class="controls">
         <button onclick="startGame()">▶️ Sākt spēli</button>
+        <script src="{{ url_for('static', filename='js/game.js') }}"></script>
+
         <button onclick="restartGame()">🔁 Restartēt</button>
       </div>
 
