--- a/templates/about.html
+++ b/templates/about.html
@@ -2,14 +2,14 @@
 <html lang="lv">
 <head>
   <meta charset="UTF-8">
-  <title>Par Spēli – Atrodi Bumbu</title>
+  <title>Par Spēli - Atrodi Bumbu</title>
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
   <div class="wrapper">
-    <h1>ℹ️ Informācija par spēli</h1>
+    <h1> - Informācija par spēli</h1>
     
-    <p>🎮 Šī ir interaktīva refleksu spēle – Tava misija ir klikšķināt uz kustīgu bumbu, kas ik pa laikam maina vietu.</p>
+    <p>🎮 Šī ir interaktīva refleksu spēle - Tava misija ir klikšķināt uz kustīgu bumbu, kas ik pa laikam maina vietu.</p>
     <p>⏱️ Tev ir 30 sekundes, lai iegūtu pēc iespējas vairāk punktus. Jo vairāk punktu, jo grūtāk kļūst – bumba kļūst mazāka!</p>
     <p>👥 Spēli vari spēlēt atkal un atkal, un sacensties ar draugiem, lai iekļūtu Top 5 rezultātos.</p>
 
