--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
   <meta charset="UTF-8" />
-  <title>Spēle – Atrodi Bumbu</title>
+  <title>Spēle - Atrodi Bumbu</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
